--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ mypy = "^1.8.0"
 ruff = "^0.3.1"
 pytest = "^8.1.1"
 pytest-cov = "^4.1.0"
+pytest-asyncio = "^0.23.6"
 
 [project.scripts]
 unchained-cli = "unchained.cli:main"
@@ -26,3 +27,10 @@ unchained-cli = "unchained.cli:main"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+testpaths = [
+    "tests",
+    "integration",
+]
