--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^2.6.3"
 jinja2 = "^3.1.3"
 click = "^8.1.7"
 uvicorn = "^0.28.0"
+databases = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
