--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: "3.3"
 services:
   redis:
     image: redis:latest
+    platform: linux/amd64
     ports:
       - "127.0.0.1:9528:6379"
   mysql:
     image: mysql:5.7
+    platform: linux/amd64
     ports:
       - "127.0.0.1:9529:3306"
     environment:
