--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ jinja2 = "^3.1.3"
 click = "^8.1.7"
 uvicorn = "^0.28.0"
 databases = "^0.9.0"
+orjson = "^3.10.3"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
